Added Comments in the Config Files

--- a/boards/arm/samsung_board/samsung_board.dts
+++ b/boards/arm/samsung_board/samsung_board.dts
@@ -2,6 +2,10 @@
 
 /dts-v1/;
 
+/*
+ * Set the status of external devices, and extend the device tree SOC settings here
+ */
+
 #include <samsung/sm.dtsi>
 
 /{
