--- a/boards/arm/samsung_board/samsung_board_defconfig
+++ b/boards/arm/samsung_board/samsung_board_defconfig
@@ -2,8 +2,10 @@
 # Copyright (c) 2021, Samsung
 #
 # SPDX-License-Identifier: Apache-2.0
-#
 
+
+#For default configuration options
+#These configurations dictate which Kconfig entries are sourced and generated for the SOC present
 
 CONFIG_ARM=y
 CONFIG_SOC_SM1052=y
